--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 		<meta charset="UTF-8" />
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta
-			name="description"
-			content="Lua minifier and lua beautifier, clean and simple."
-		/>
 		<title>Lua minifier</title>
+		<meta name="description" content="A Lua code minifier, clean and simple." />
+		<meta property="og:title" content="Lua Minifier" />
+		<meta
+			property="og:description"
+			content="A Lua code minifier, clean and simple."
+		/>
 	</head>
 	<body>
 		<noscript>Come back after you turn on JavaScript.</noscript>
